--- a/lib/LWJGL/lwjgl-release-custom-zip.json
+++ b/lib/LWJGL/lwjgl-release-custom-zip.json
@@ -1,10 +1,21 @@
 {
   "build": "release",
   "mode": "zip",
-  "selectedAddons": [],
+  "selectedAddons": [
+    "joml"
+  ],
   "platform": [
+    "freebsd",
     "linux",
-    "windows"
+    "linux-arm64",
+    "linux-arm32",
+    "macos",
+    "macos-arm64",
+    "windows",
+    "windows-x86",
+    "windows-arm64",
+    "linux-riscv64",
+    "linux-ppc64le"
   ],
   "descriptions": false,
   "compact": false,
@@ -16,10 +27,15 @@
   "language": "groovy",
   "contents": [
     "lwjgl",
+    "lwjgl-assimp",
     "lwjgl-glfw",
+    "lwjgl-nfd",
     "lwjgl-openal",
     "lwjgl-opengl",
-    "lwjgl-stb"
+    "lwjgl-stb",
+    "lwjgl-spvc",
+    "lwjgl-freetype",
+    "lwjgl-opencl"
   ],
   "version": "3.3.6",
   "versionLatest": "3.3.6"
